<resources>
    <string name="app_name">DrReport</string>
    <string name="app_title_for_android">DrReport</string>
    <string name="company_name">Swaas Systems Private Limited</string>
    <string name="mailto_contact">mailto:support@swaas.net</string>
    <string name="phoneto_contact">tel:04445564456</string>
    <string name="mail_contact">support@swaas.net</string>
    <string name="website">www.swaas.net</string>
    <string name="phone_contact">044-45564456</string>
    <string name="support_subject">DrReport - Support required</string>

    <string name="current_user_log">You are logged in as \n\'%s\'</string>
    <string name="contact_us">Contact Us</string>
    <string name="version">Version</string>
    <string name="action_about">About</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_id">User ID</string>
    <string name="error_invalid_username">User ID invalid.</string>
    <string name="error_invalid_password">Password invalid.</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">SAVE</string>
    <string name="action_change_password">Change Password</string>
    <string name="all_doctors">All Doctors</string>
    <string name="recent">Recent</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="speciality_name">Speciality</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email ID</string>
    <string name="landmark">Landmark</string>
    <string name="assistant_name">Assistant Name</string>
    <string name="assistant_phone">Assistant Phone Number</string>
    <string name="remarks">Remarks</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>

    <string name="logging_in">Logging in...</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="is_required">&#160;is required.</string>
    <string name="is_invalid">&#160;is invalid.</string>
    <string name="please_enter_your">Please enter your %s</string>
    <string name="please_retype_your_new_password">Please retype your new password.</string>

    <string name="working_hours">Working Hours</string>
    <string name="from">From&#160;</string>
    <string name="to">To&#160;</string>
    <string name="work_from">Work From</string>
    <string name="work_to">Work To</string>
    <string name="loading">Loading...</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_password">Retype Password</string>

    <string name="msg_enable_network">Network is disabled in your device. Would you like to enable it?</string>
    <string name="msg_adding_doctor">Adding doctor, please wait.</string>
    <string name="msg_updating_doctor">Updating, please wait.</string>
    <string name="msg_doctor_added_success">Doctor added successfully.</string>
    <string name="msg_doctor_updated_success">Doctor updated successfully.</string>
    <string name="msg_got_location_details">Location details obtained.</string>
    <string name="msg_getting_location_details">Getting location details.</string>
    <string name="msg_recent_doctors">Recently added 10 doctors</string>
    <string name="error_unable_to_save">Unable to save doctor.</string>
    <string name="error_network">No Network! Turn ON data or WiFi.</string>
    <string name="error_max_limit">This field exceeds max limit of&#160;</string>
    <string name="error_getting_location_details">Error getting location details, please check your network and GPS are enabled.</string>
    <string name="error_gps_off">GPS is disabled, please enable and try again.</string>
    <string name="error_validation">Kindly fill all the mandatory details without special characters. Please scroll down to check and fill.</string>
    <string name="report">Day-wise Report</string>
    <string name="error_old_password_no_match">Old password does not match.</string>
    <string name="error_password_no_match">New Password does not matches with new password.</string>
    <string name="msg_downloading">Downloading... %s</string>
    <string name="error">Error</string>
    <string name="error_workto_should_be_greater">Work to time should be greater than work from time.</string>
    <string name="error_workto_should_not_be_equal">Work to time should not be equal to work from time.</string>
    <string name="trainer_code">Trainer Code</string>
    <string name="error_email_already_exists">Email id already exists.</string>
    <string name="action_view_report">View Report</string>
    <string name="action_help">Help</string>
    <string name="formatted_phone">Phone: %s</string>
    <string name="formatted_email">Email: %s</string>
    <string name="formatted_speciality">Speciality: %s</string>
    <string name="na">N/A</string>
    <string name="empty_doctors">No doctors available. Please click the (+) button below to add doctors.</string>
    <string name="empty_doctors_report">No doctors available.</string>
    <string name="error_address_required">Address required. (Press the above button)</string>
    <string name="error_address_invalid">Address is invalid.</string>
    <string name="hospital_address">Hospital Address</string>
    <string name="checkin_hospital_address">Tap here to pick Geo code</string>
    <string name="hospital_photo">Hospital Photo</string>
    <string name="doctor_personal_details">Doctor Personal Details</string>
    <string name="hospital_clinic_details">Hospital / Clinic Details</string>
    <string name="doctor_assistant_details">Doctor\'s Assistant Detail</string>
    <string name="other_info">Other Information</string>
    <string name="pick_current_location">Pick Current Geo code</string>
    <string name="developed_by">Developed By</string>
    <string name="full_name">Full Name</string>
    <string name="action_edit">Edit</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>
    <string name="address_entry">Enter address</string>
    <string name="getting_lat_long">getting latitude and longitude</string>
</resources>
