<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@id/action_search"
        android:title="Search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@id/action_change_password" android:title="@string/action_change_password"
        android:orderInCategory="100" app:showAsAction="collapseActionView" />
    <item android:id="@id/action_view_report" android:title="@string/action_view_report"
        android:orderInCategory="100" app:showAsAction="collapseActionView" />
    <item android:id="@id/action_help" android:title="@string/action_help"
        android:orderInCategory="100" app:showAsAction="collapseActionView" />
    <item android:id="@id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="collapseActionView" />
</menu>
